scrollbar fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -114,7 +114,7 @@ footer {
 
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
